--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
             </p>
         </div>
 
+        <div class="imgContainer">
+            <a href="coffee/index.html">
+            <img src="coffee/images/Coffee.png" alt="coffee">
+            </a>
+        </div>
+
         <div class="footer">
-            <p>תמונת הרקע נוצרה על ידי <b>סטאר</b>.</p>
+            <p>נבנה, עוצב וצויר על ידי <b>סטאר</b>.</p>
         </div>
     </section>
 
