--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </div>
 
         <div class="imgContainer">
-            <a href="coffee/index.html">
-            <img src="coffee/images/Coffee.png" alt="coffee">
+            <a href="Coffee/index.html">
+            <img src="Coffee/images/Coffee.png" alt="coffee">
             </a>
         </div>
 
