--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div>
             <h1>ברוכים הבאים לאתר שלי</h1>
         </div>
-
+        <div><button><a href="Star Cohen english CV.docx" download="Star Cohen english CV.docx">הורדת קורות
+                    חיי</a></button></div>
         <div>
             <p>
                 תהנו להסתכל מסביב באתר ולראות מה יש לי להציע.
@@ -36,11 +37,71 @@
                 אני אעדכן את האתר באופן קבוע עם תוכן חדש ומעניין, אז שווה לחזור שוב ולבדוק מה חדש.
             </p>
         </div>
+        <div>
+            <h2>עבודות HTML ו-CSS</h2>
+        </div>
 
-        <div class="imgContainer">
-            <a href="Coffee/index.html">
-            <img src="Coffee/images/Coffee.png" alt="coffee">
-            </a>
+
+        <div class="projects">
+
+            <div class="imgContainer">
+                <a href="Coffee/index.html">
+                    <img src="Coffee/images/Coffee.png" alt="coffee">
+                </a>
+                <h3>קפה</h3>
+                <p>דף נחיתה</p>
+            </div>
+
+            <div class="imgContainer">
+                <a href="#">
+                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
+                </a>
+                <h3>פרויקט</h3>
+                <p>דף נחיתה</p>
+            </div>
+            <div class="imgContainer">
+                <a href="#">
+                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
+                </a>
+                <h3>פרויקט</h3>
+                <p>דף נחיתה</p>
+            </div>
+            <div class="imgContainer">
+                <a href="#">
+                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
+                </a>
+                <h3>פרויקט</h3>
+                <p>דף נחיתה</p>
+            </div>
+            <div class="imgContainer">
+                <a href="#">
+                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
+                </a>
+                <h3>פרויקט</h3>
+                <p>דף נחיתה</p>
+            </div>
+            <div class="imgContainer">
+                <a href="#">
+                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
+                </a>
+                <h3>פרויקט</h3>
+                <p>דף נחיתה</p>
+            </div>
+            <div class="imgContainer">
+                <a href="#">
+                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
+                </a>
+                <h3>פרויקט</h3>
+                <p>דף נחיתה</p>
+            </div>
+            <div class="imgContainer">
+                <a href="#">
+                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
+                </a>
+                <h3>פרויקט</h3>
+                <p>דף נחיתה</p>
+            </div>
+
         </div>
 
         <div class="footer">
