--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="projects">
 
             <div class="imgContainer">
-                <a href="Coffee/index.html">
+                <a href="Coffee/index.html" target="_blank" rel="noopener noreferrer">
                     <img src="Coffee/images/Coffee.png" alt="coffee">
                 </a>
                 <h3>קפה</h3>
@@ -53,47 +53,28 @@
             </div>
 
             <div class="imgContainer">
-                <a href="#">
+                <a href="#" target="_blank" rel="noopener noreferrer">
                     <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
                 </a>
                 <h3>פרויקט</h3>
                 <p>דף נחיתה</p>
             </div>
             <div class="imgContainer">
-                <a href="#">
+                <a href="#" target="_blank" rel="noopener noreferrer">
                     <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
                 </a>
                 <h3>פרויקט</h3>
                 <p>דף נחיתה</p>
             </div>
             <div class="imgContainer">
-                <a href="#">
+                <a href="#" target="_blank" rel="noopener noreferrer">
                     <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
                 </a>
                 <h3>פרויקט</h3>
                 <p>דף נחיתה</p>
             </div>
-            <div class="imgContainer">
-                <a href="#">
-                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
-                </a>
-                <h3>פרויקט</h3>
-                <p>דף נחיתה</p>
-            </div>
-            <div class="imgContainer">
-                <a href="#">
-                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
-                </a>
-                <h3>פרויקט</h3>
-                <p>דף נחיתה</p>
-            </div>
-            <div class="imgContainer">
-                <a href="#">
-                    <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
-                </a>
-                <h3>פרויקט</h3>
-                <p>דף נחיתה</p>
-            </div>
+
+
             <div class="imgContainer">
                 <a href="#">
                     <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
