--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             </div>
 
             <div class="imgContainer">
-                <a href="#" target="_blank" rel="noopener noreferrer">
+                <a href="gallery/index.html" target="_blank" rel="noopener noreferrer">
                     <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
                 </a>
-                <h3>פרויקט</h3>
+                <h3>גריד</h3>
                 <p>דף נחיתה</p>
             </div>
             <div class="imgContainer">
