--- a/gallery/index.html
+++ b/gallery/index.html
@@ -22,32 +22,32 @@
       <h1>לגלות את העולם</h1>
       <p>העולם מלא בהרפתקאות מופלאות שמחכות לכם. התחילו לחקור, לגלות, ולהרגיש את הריגוש של הבלתי נודע.</p>
     </div>
-  
+
     <div>
-      <img class="img1" src="img/Rectangle 514.png">
+      <img src="img/Rectangle 514.png">
     </div>
     <div>
-      <img class="img2" src="img/Rectangle 515.png">
+      <img src="img/Rectangle 515.png">
     </div>
     <div>
-      <img class="img3" src="img/Rectangle 506-5.png">
+      <img src="img/Rectangle 506-5.png">
     </div>
     <div>
-      <img class="img4" src="img/Rectangle 516.png">
+      <img src="img/Rectangle 516.png">
     </div>
     <div>
-      <img class="img5" src="img/Rectangle 506-1.png">
+      <img src="img/Rectangle 506-1.png">
     </div>
     <div>
-      <img class="img6" src="img/Rectangle 506-4.png">
+      <img src="img/Rectangle 506-4.png">
     </div>
     <div>
-      <img class="img7" src="img/Rectangle 506-3.png">
+      <img src="img/Rectangle 506-3.png">
     </div>
     <div>
-      <img class="img8" src="img/Rectangle 506-2.png">
+      <img src="img/Rectangle 506-2.png">
     </div>
-  
+
     <div class="container-form">
       <form>
         <h2 class="form-title">ספרו לנו על החוויה שלכם</h2>
@@ -67,24 +67,24 @@
         <button type="submit">שליחה</button>
       </form>
     </div>
-  
+
     <div>
-      <img class="img9" src="img/Rectangle 506-7.png">
+      <img src="img/Rectangle 506-7.png">
     </div>
     <div>
-      <img class="img10" src="img/Rectangle 506-8.png">
+      <img src="img/Rectangle 506-8.png">
     </div>
     <div>
-      <img class="img11" src="img/Rectangle 506-6.png">
+      <img src="img/Rectangle 506-6.png">
     </div>
     <div>
-      <img class="img12" src="img/Rectangle 506-9.png">
+      <img src="img/Rectangle 506-9.png">
     </div>
     <div>
-      <img class="img13" src="img/Rectangle 506.png">
+      <img src="img/Rectangle 506.png">
     </div>
     <div>
-      <img class="img14" src="img/Rectangle 513.png">
+      <img src="img/Rectangle 513.png">
     </div>
   </div>
 
