--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         <div class="strip divider-container">
             <h1>ברוכים הבאים לתיק העבודות שלי</h1>
 
-            <!-- <img class="divider" src="img/wavy-divider.svg">
-
-            </img> -->
+            <!-- <img class="divider" src="img/wavy-divider.svg"></img> -->
 
         </div>
 
