--- a/intermediate.html
+++ b/intermediate.html
@@ -9,14 +9,15 @@
 </head>
 
 <body>
-    <!-- <nav>
-        <ul class="horizontalNav">
-            <li><a href="#">עליי</a></li>
-            <li><a href="#">השפות שלי</a></li>
-            <li><a href="#">תיק העבודות שלי</a></li>
-            <li><a href="#">צרו קשר</a></li>
-        </ul>
-    </nav> -->
+        <nav>
+            <ul class="horizontalNav">
+                <li><a href="#">התיק שלי</a></li>
+                <li><a href="#about">עליי</a></li>
+                <li><a href="#langs">השפות שלי</a></li>
+                <li><a href="#projects">תיק העבודות שלי</a></li>
+                <li><a href="#">צרו קשר</a></li>
+            </ul>
+        </nav>
 
 
     <section>
