--- a/intermediate.html
+++ b/intermediate.html
@@ -22,7 +22,7 @@
             border-radius: 20px;
         }
 
-        button {
+        .button {
             margin: 20px;
         }
     </style>
@@ -40,8 +40,8 @@
         <div class="strip">
             <h1 id="pageTitle">דף ביניים</h1>
             <p id="pageDescription">הכנה לדף</p>
-            <button><a id="pageLink" href="#">מעבר לדף</a></button>
-            <button><a id="downloadLink" href="#" download>הורד את הפרויקט</a></button>
+            <a class="button" id="pageLink" href="#">מעבר לדף</a>
+            <a class="button" id="downloadLink" href="#" download>הורד את הפרויקט</a>
         </div>
         <div class="strip icons" id="langs">
             <i class="fa-brands fa-html5" title="HTML"></i>
@@ -51,9 +51,9 @@
             <img id="pageImage" src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="Project Image">
         </div>
     </section>
-    <div class="footer">
+    <footer>
         <p>נבנה, עוצב וצויר על ידי <b>סטאר</b>.</p>
-    </div>
+    </footer>
 
 <script>
     // Get the URL parameters
