--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <p> הגבול היחיד הוא הדמיון.</p>
             </p>
 
-            <button><a href="Star Cohen english CV.docx" download="Star Cohen english CV.docx">הורדת קורות
-                    חיי</a></button>
+            <a class="button" href="Star Cohen english CV.docx" download="Star Cohen english CV.docx">הורדת קורות
+                    חיי</a>
         </div>
 
 
@@ -139,12 +139,12 @@
 
 
     </section>
-    <div class="footer">
+    <footer>
         <p>נבנה, עוצב וצויר על ידי <b>סטאר</b>.</p>
-    </div>
+    </footer>
 
-<script>
-    // Function to encode URL parameters
+    <script>
+        // Function to encode URL parameters
         function encodeParams(params) {
             return new URLSearchParams(params).toString();
         }
@@ -169,11 +169,10 @@
                     // Create project HTML without the download link
                     const projectHTML = `
         <div class="imgContainer">
-          <a href="${pageLink}">
             <img src="${project.image}" alt="${project.title}">
             <h3>${project.title}</h3>
             <p>${project.description}</p>
-          </a>
+            <a class="button" href="${pageLink}"> לדף הפרויקט </a>
         </div>
       `;
 
@@ -183,7 +182,7 @@
             })
             .catch(error => console.error('Error fetching the project data:', error));
 
-</script>
+    </script>
 
 
 
