--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
 
 <body>
     <nav>
-        <ul class="horizontalNav">
-            <li><a href="#">התיק שלי</a></li>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <ul class="horizontalNav left">
             <li><a href="#about">אודותיי</a></li>
             <li><a href="#langs">השפות שלי</a></li>
-            <li><a href="#projects">תיק העבודות שלי</a></li>
+            <li><a href="#projects">תיק העבודות </a></li>
             <li><a href="#contact">צרו קשר</a></li>
+        </ul>
+        <ul class="horizontalNav right">
+            <li><a href="#">
+                <!-- סטאר -->
+                <img src="img/winged_star.png" alt="סמליל">
+            </a></li>
         </ul>
     </nav>
 
@@ -60,37 +67,6 @@
 
 
             <div class="projects">
-
-                <div class="imgContainer">
-                    <a href="Coffee/index.html">
-                        <img src="Coffee/images/Coffee.png" alt="coffee">
-                        <h3>קפה</h3>
-                        <p>דף נחיתה</p>
-                    </a>
-                </div>
-
-                <div class="imgContainer">
-                    <a href="gallery/index.html">
-                        <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg">
-                        <h3>גריד</h3>
-                        <p>דף נחיתה</p>
-                    </a>
-                </div>
-                <div class="imgContainer">
-                    <a href="forward/index.html">
-                        <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
-                        <h3>הדרך קדימה</h3>
-                        <p>דף נחיתה</p>
-                    </a>
-                </div>
-                <div class="imgContainer">
-                    <a href="icons page/index.html">
-                        <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
-                        <h3>דף נחיתה צהוב</h3>
-                        <p>דף נחיתה</p>
-                    </a>
-                </div>
-
 
                 <div class="imgContainer">
                     <a href="#">
