--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
         </ul>
         <ul class="horizontalNav right">
             <li><a href="#">
-                <!-- סטאר -->
-                <img src="img/winged_star.png" alt="סמליל">
-            </a></li>
+                    Star
+                    <img src="img/winged_star.png" alt="סמליל">
+                </a></li>
         </ul>
     </nav>
 
     <section>
 
-        <div class="strip divider-container">
+        <div class="strip divider-container stars">
             <h1>ברוכים הבאים לתיק העבודות שלי</h1>
 
-            <!-- <img class="divider" src="img/wavy-divider.svg"></img> -->
-
+            <p>
+                המומחיות שלי בעיצוב ובקוד עושה את כל ההבדל.
+            </p>
         </div>
 
         <div class="strip icons" id="langs">
@@ -49,6 +50,9 @@
 
         <div class="strip" id="about">
             <h2> אודותיי</h2>
+
+            <img src="img/Star.jpg" alt="תמונה של סטאר">
+
             <p>
                 אני איש צעיר מלא מוטיבציה והתלהבות, במיוחד לפרויקטי קוד. ופה נמצא רק קצה הקרחון.
 
@@ -56,11 +60,11 @@
             </p>
 
             <a class="button" href="Star Cohen english CV.docx" download="Star Cohen english CV.docx">הורדת קורות
-                    חיי</a>
+                חיי</a>
         </div>
 
 
-        <section class="strip stars" id="projects">
+        <section class="strip darker" id="projects">
             <div>
                 <h2>עבודות HTML ו-CSS</h2>
             </div>
@@ -125,6 +129,24 @@
             return new URLSearchParams(params).toString();
         }
 
+        function getLanguageIcon(language) {
+                switch (language.toLowerCase()) {
+                    case 'html':
+                        return '<i class="fa-brands fa-html5" title="HTML"></i>';
+                    case 'css':
+                        return '<i class="fa-brands fa-css3-alt" title="CSS"></i>';
+                    case 'javascript':
+                        return '<i class="fa-brands fa-js" title="JavaScript"></i>';
+                    case 'python':
+                        return '<i class="fa-brands fa-python" title="Python"></i>';
+                    case 'react':
+                        return '<i class="fa-brands fa-react" title="React"></i>';
+                    // Add more cases as needed for other languages
+                    default:
+                        return '';
+                }
+            }
+
         // Fetch the JSON data and populate the projects section
         fetch('projects.json')
             .then(response => response.json())
@@ -138,7 +160,8 @@
                         page: project.path,
                         title: project.title,
                         description: project.description,
-                        image: project.image  // Include image in URL
+                        image: project.image,
+                        languages: project.languages.join(',')
                     };
                     const pageLink = `intermediate.html?${encodeParams(params)}`;
 
@@ -148,6 +171,9 @@
             <img src="${project.image}" alt="${project.title}">
             <h3>${project.title}</h3>
             <p>${project.description}</p>
+            <div class="project-icons">
+        ${project.languages.map(language => getLanguageIcon(language)).join('')}
+    </div>
             <a class="button" href="${pageLink}"> לדף הפרויקט </a>
         </div>
       `;
