--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>האתר של סטאר</title>
     <link rel="stylesheet" href="style.css">
 
+    <link rel="icon" href="img/winged_star.png" type="image/png">
+    <link rel="shortcut icon" href="img/winged_star.png" type="image/png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
