--- a/intermediate.html
+++ b/intermediate.html
@@ -46,7 +46,7 @@
             <h1 id="pageTitle">דף ביניים</h1>
             <p id="pageDescription">הכנה לדף</p>
             <a class="button" id="pageLink" href="#">מעבר לדף</a>
-            <a class="button" id="downloadLink" href="#" download>הורד את הפרויקט</a>
+            <a class="button" id="downloadLink" href="#">הורד את הפרויקט</a>
         </div>
         <div class="strip icons" id="langs">
             <i class="fa-brands fa-html5" title="HTML"></i>
