--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     </section>
     <footer>
-<p>נבנה, עוצב וצויר על ידי <b>סטאר</b>, כל הזכויות שמורות 2024.</p>
+        <p>נבנה, עוצב וצויר על ידי <b>סטאר</b>, כל הזכויות שמורות 2024.</p>
 
 
     </footer>
@@ -170,7 +170,7 @@
                     };
                     const pageLink = `intermediate.html?${encodeParams(params)}`;
 
-                    // Create project HTML without the download link
+                    // Create project HTML
                     const projectHTML = `
         <div class="imgContainer">
             <img src="${project.image}" alt="${project.title}">
