--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="icon" href="img/winged_star.png" type="image/png">
-    <link rel="shortcut icon" href="img/winged_star.png" type="image/png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -27,7 +26,7 @@
         </ul>
         <ul class="horizontalNav right">
             <li><a href="#">
-                    Star
+                    <p>Star</p>
                     <img src="img/winged_star.png" alt="סמליל">
                 </a></li>
         </ul>
@@ -129,11 +128,7 @@
     </footer>
 
     <script>
-        // Function to encode URL parameters
-        function encodeParams(params) {
-            return new URLSearchParams(params).toString();
-        }
-
+        // Function to get the icon HTML for each language
         function getLanguageIcon(language) {
             switch (language.toLowerCase()) {
                 case 'html':
@@ -146,7 +141,6 @@
                     return '<i class="fa-brands fa-python" title="Python"></i>';
                 case 'react':
                     return '<i class="fa-brands fa-react" title="React"></i>';
-                // Add more cases as needed for other languages
                 default:
                     return '';
             }
@@ -160,36 +154,29 @@
                 projectsContainer.innerHTML = ''; // Clear any existing content
 
                 data.projects.forEach(project => {
-                    // Build the page link dynamically with image
-                    const params = {
-                        page: project.path,
-                        title: project.title,
-                        description: project.description,
-                        image: project.image,
-                        languages: project.languages.join(',')
-                    };
-                    const pageLink = `intermediate.html?${encodeParams(params)}`;
+                    // Generate a link to the intermediate page using only the project path as a parameter
+                    const pageLink = `intermediate.html?project=${project.path}`;
 
-                    // Create project HTML
+                    // Create project HTML with the title, description, and language icons
                     const projectHTML = `
-        <div class="imgContainer">
-            <img src="${project.image}" alt="${project.title}">
-            <h3>${project.title}</h3>
-            <p>${project.description}</p>
-            <div class="project-icons">
-        ${project.languages.map(language => getLanguageIcon(language)).join('')}
-    </div>
-            <a class="button" href="${pageLink}"> לדף הפרויקט </a>
-        </div>
-      `;
+                        <div class="imgContainer">
+                            <img src="${project.image}" alt="${project.title}">
+                            <h3>${project.title}</h3>
+                            <p>${project.description}</p>
+                            <div class="project-icons">
+                                ${project.languages.map(language => getLanguageIcon(language)).join('')}
+                            </div>
+                            <a class="button" href="${pageLink}">לדף הפרויקט</a>
+                        </div>
+                    `;
 
                     // Append the project to the container
                     projectsContainer.innerHTML += projectHTML;
                 });
             })
             .catch(error => console.error('Error fetching the project data:', error));
-
     </script>
+
 
 
 
