--- a/intermediate.html
+++ b/intermediate.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>דף ביניים</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/winged_star.png" type="image/png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -34,7 +35,7 @@
         </ul>
         <ul class="horizontalNav right">
             <li><a href="index.html">
-                    Star
+                    <p>Star</p>
                     <img src="img/winged_star.png" alt="סמליל">
                 </a></li>
         </ul>
@@ -45,7 +46,7 @@
         <div class="strip">
             <h1 id="pageTitle">דף ביניים</h1>
             <p id="pageDescription">הכנה לדף</p>
-            <a class="button" id="pageLink" href="#">מעבר לדף</a>
+            <a class="button" id="pageLink" href="#" target="_blank">מעבר לדף</a>
             <a class="button" id="downloadLink" href="#">הורד את הפרויקט</a>
         </div>
         <div class="strip icons" id="langs">
@@ -61,20 +62,42 @@
     </footer>
 
     <script>
-
-        // Get the URL parameters
+        // Get the `project` parameter from the URL
         const urlParams = new URLSearchParams(window.location.search);
-        const page = urlParams.get('page');
-        const title = urlParams.get('title');
-        const description = urlParams.get('description');
-        const image = urlParams.get('image');  // Get the image parameter
-        const languages = urlParams.get('languages') ? urlParams.get('languages').split(',') : [];  // Get languages and split into array
+        const projectPath = urlParams.get('project'); // The unique path or ID for the project
 
-        // Set the dynamic content
-        document.getElementById('pageTitle').innerText = title;
-        document.getElementById('pageDescription').innerText = description;
-        document.getElementById('pageLink').href = page;
-        document.getElementById('pageImage').src = image;  // Set the image src
+        // Fetch all project data from the JSON file
+        fetch('projects.json')
+            .then(response => response.json())
+            .then(data => {
+                // Find the project that matches the path
+                const project = data.projects.find(p => p.path === projectPath);
+
+                if (project) {
+                    // Set the page title
+                    document.title = `פרויקט ${project.title}`;
+
+                    // Set the dynamic content
+                    document.getElementById('pageTitle').innerText = project.title;
+                    document.getElementById('pageDescription').innerText = project.description;
+                    document.getElementById('pageLink').href = project.path;
+                    document.getElementById('pageImage').src = project.image;
+
+                    // Set the download link
+                    document.getElementById('downloadLink').href = project.zip;
+
+                    // Display language icons
+                    const iconsContainer = document.getElementById('langs');
+                    iconsContainer.innerHTML = ''; // Clear existing icons
+                    project.languages.forEach(language => {
+                        iconsContainer.innerHTML += getLanguageIcon(language);
+                    });
+                } else {
+                    console.error('Project not found.');
+                    document.getElementById('pageTitle').innerText = 'Project Not Found';
+                }
+            })
+            .catch(error => console.error('Error fetching project data:', error));
 
         // Function to generate language icons
         function getLanguageIcon(language) {
@@ -93,25 +116,6 @@
                     return '';
             }
         }
-
-        // Display language icons
-        const iconsContainer = document.getElementById('langs');
-        iconsContainer.innerHTML = '';  // Clear any existing content
-        languages.forEach(language => {
-            iconsContainer.innerHTML += getLanguageIcon(language);
-        });
-
-        // Fetch the JSON file to get the zip file link
-        fetch('projects.json')
-            .then(response => response.json())
-            .then(data => {
-                const project = data.projects.find(p => p.path === page);
-                if (project) {
-                    document.getElementById('downloadLink').href = project.zip;
-                }
-            })
-            .catch(error => console.error('Error fetching project data:', error));
-
     </script>
 
 </body>
