--- a/intermediate.html
+++ b/intermediate.html
@@ -57,9 +57,9 @@
             <img id="pageImage" src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="Project Image">
         </div>
     </section>
-    <footer>
+    <!-- <footer>
         <p>נבנה, עוצב וצויר על ידי <b>סטאר</b>.</p>
-    </footer>
+    </footer> -->
 
     <script>
         // Get the `project` parameter from the URL
@@ -116,6 +116,8 @@
                     return '';
             }
         }
+
+
     </script>
 
 </body>
