--- a/index.html
+++ b/index.html
@@ -66,13 +66,30 @@
         </div>
 
 
-        <section class="strip darker" id="projects">
+        <section class="strip darker">
             <div>
                 <h2>עבודות HTML ו-CSS</h2>
             </div>
 
 
-            <div class="projects">
+            <div class="css-projects">
+
+                <div class="imgContainer">
+                    <a href="#">
+                        <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
+                        <h3>פרויקט</h3>
+                        <p>דף נחיתה</p>
+                    </a>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="strip darker" >
+            <div>
+                <h2>עבודות JavaScript </h2>
+            </div>
+            <div class="js-projects">
 
                 <div class="imgContainer">
                     <a href="#">
@@ -173,10 +190,10 @@
         fetch('projects.json')
             .then(response => response.json())
             .then(data => {
-                const projectsContainer = document.querySelector('.projects');
-                projectsContainer.innerHTML = ''; // Clear any existing content
+                const cssProjectsContainer = document.querySelector('.css-projects');
+                cssProjectsContainer.innerHTML = ''; // Clear any existing content
 
-                data.projects.forEach(project => {
+                data["css-projects"].forEach(project => {
                     // Generate a link to the intermediate page using only the project path as a parameter
                     const pageLink = `intermediate.html?project=${project.path}`;
 
@@ -194,8 +211,33 @@
                     `;
 
                     // Append the project to the container
-                    projectsContainer.innerHTML += projectHTML;
+                    cssProjectsContainer.innerHTML += projectHTML;
                 });
+
+                const jsProjectsContainer = document.querySelector('.js-projects');
+                jsProjectsContainer.innerHTML = ''; // Clear any existing content
+
+                data["js-projects"].forEach(project => {
+                    // Generate a link to the intermediate page using only the project path as a parameter
+                    const pageLink = `intermediate.html?project=${project.path}`;
+
+                    // Create project HTML with the title, description, and language icons
+                    const projectHTML = `
+                        <div class="imgContainer">
+                            <img src="${project.image}" alt="${project.title}">
+                            <h3>${project.title}</h3>
+                            <p>${project.description}</p>
+                            <div class="project-icons">
+                                ${project.languages.map(language => getLanguageIcon(language)).join('')}
+                            </div>
+                            <a class="button" href="${pageLink}">לדף הפרויקט</a>
+                        </div>
+                    `;
+
+                    // Append the project to the container
+                    jsProjectsContainer.innerHTML += projectHTML;
+                });
+
             })
             .catch(error => console.error('Error fetching the project data:', error));
     </script>
