--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <a href="#">
                         <img src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="change me">
                         <h3>פרויקט</h3>
-                        <p>דף נחיתה</p>
+                        <p> דף מגניב</p>
                     </a>
                 </div>
 
