--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </section>
 
-        <section class="strip darker" >
+        <section class="strip darker">
             <div>
                 <h2>עבודות JavaScript </h2>
             </div>
@@ -140,11 +140,13 @@
     </section>
     <footer>
         <p>נבנה, עוצב וצויר על ידי <b>סטאר</b>, כל הזכויות שמורות 2024.</p>
-
-
     </footer>
 
+    <script src="script.js"></script>
     <script>
+        fetchProjects();
+    </script>
+    <!-- <script>
         // JavaScript to toggle text display on click
         document.querySelectorAll('#langs i').forEach(icon => {
             icon.addEventListener('click', (event) => {
@@ -240,7 +242,7 @@
 
             })
             .catch(error => console.error('Error fetching the project data:', error));
-    </script>
+    </script> -->
 
 
 
