--- a/intermediate.html
+++ b/intermediate.html
@@ -57,11 +57,16 @@
             <img id="pageImage" src="https://i.ytimg.com/vi/Gn7kSPL8ArU/maxresdefault.jpg" alt="Project Image">
         </div>
     </section>
-    <!-- <footer>
-        <p>נבנה, עוצב וצויר על ידי <b>סטאר</b>.</p>
-    </footer> -->
 
+    <script src="script.js"></script>
     <script>
+        const urlParams = new URLSearchParams(window.location.search);
+            const projectPath = urlParams.get('project'); // The unique path or ID for the project
+        fetchProjectForPage(projectPath);
+    </script>
+
+
+    <!-- <script>
         // Get the `project` parameter from the URL
         const urlParams = new URLSearchParams(window.location.search);
         const projectPath = urlParams.get('project'); // The unique path or ID for the project
@@ -127,7 +132,7 @@
         }
 
 
-    </script>
+    </script> -->
 
 </body>
 
