--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
 
-            <form action="#" method="post">
+            <form>
                 <h2 id="contact">צרו קשר</h2>
                 <p>רוצים אתר משלכם? השאירו פרטים.</p>
 
@@ -122,7 +122,7 @@
 
                 <div class="form-control">
                     <label for="phone">טלפון</label>
-                    <input type="tel" id="phone" name="phone">
+                    <input type="tel" id="phone" name="phone" required>
                 </div>
 
                 <div class="form-control">
@@ -131,9 +131,11 @@
                 </div>
 
                 <button type="submit">שליחה</button>
+                <p class="form-message hidden">תודה על מילוי הפרטים. שירות זה יהיה זמין בקרוב.</p>
             </form>
             <img src="img/letter.png">
         </div>
+        
 
 
 
@@ -143,108 +145,17 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="validation.js"></script>
     <script>
-        fetchProjects();
+        document.addEventListener('DOMContentLoaded', () => {
+            // קריאה לפונקציות לאחר טעינת הדף
+            fetchProjects();
+
+            // חיבור טופס ולידציה לאחר טעינה
+            const form = document.querySelector('form');
+            form.addEventListener('submit', validateForm);
+        });
     </script>
-    <!-- <script>
-        // JavaScript to toggle text display on click
-        document.querySelectorAll('#langs i').forEach(icon => {
-            icon.addEventListener('click', (event) => {
-                // Prevent the event from bubbling up to the document click event
-                event.stopPropagation();
-
-                // Remove any existing description spans
-                document.querySelectorAll('.icon-text').forEach(text => text.remove());
-
-                // Create a new description span and set its text
-                const textSpan = document.createElement('span');
-                textSpan.classList.add('icon-text');
-                textSpan.innerText = icon.getAttribute('title');
-
-                // Insert the span after the icon
-                icon.parentNode.insertBefore(textSpan, icon.nextSibling);
-            });
-        });
-
-        // Hide text when clicking outside of icons
-        document.addEventListener('click', () => {
-            document.querySelectorAll('.icon-text').forEach(text => text.remove());
-        });
-        // Function to get the icon HTML for each language
-        function getLanguageIcon(language) {
-            switch (language.toLowerCase()) {
-                case 'html':
-                    return '<i class="fa-brands fa-html5" title="HTML"></i>';
-                case 'css':
-                    return '<i class="fa-brands fa-css3-alt" title="CSS"></i>';
-                case 'javascript':
-                    return '<i class="fa-brands fa-js" title="JavaScript"></i>';
-                case 'python':
-                    return '<i class="fa-brands fa-python" title="Python"></i>';
-                case 'react':
-                    return '<i class="fa-brands fa-react" title="React"></i>';
-                default:
-                    return '';
-            }
-        }
-
-        // Fetch the JSON data and populate the projects section
-        fetch('projects.json')
-            .then(response => response.json())
-            .then(data => {
-                const cssProjectsContainer = document.querySelector('.css-projects');
-                cssProjectsContainer.innerHTML = ''; // Clear any existing content
-
-                data["css-projects"].forEach(project => {
-                    // Generate a link to the intermediate page using only the project path as a parameter
-                    const pageLink = `intermediate.html?project=${project.path}`;
-
-                    // Create project HTML with the title, description, and language icons
-                    const projectHTML = `
-                        <div class="imgContainer">
-                            <img src="${project.image}" alt="${project.title}">
-                            <h3>${project.title}</h3>
-                            <p>${project.description}</p>
-                            <div class="project-icons">
-                                ${project.languages.map(language => getLanguageIcon(language)).join('')}
-                            </div>
-                            <a class="button" href="${pageLink}">לדף הפרויקט</a>
-                        </div>
-                    `;
-
-                    // Append the project to the container
-                    cssProjectsContainer.innerHTML += projectHTML;
-                });
-
-                const jsProjectsContainer = document.querySelector('.js-projects');
-                jsProjectsContainer.innerHTML = ''; // Clear any existing content
-
-                data["js-projects"].forEach(project => {
-                    // Generate a link to the intermediate page using only the project path as a parameter
-                    const pageLink = `intermediate.html?project=${project.path}`;
-
-                    // Create project HTML with the title, description, and language icons
-                    const projectHTML = `
-                        <div class="imgContainer">
-                            <img src="${project.image}" alt="${project.title}">
-                            <h3>${project.title}</h3>
-                            <p>${project.description}</p>
-                            <div class="project-icons">
-                                ${project.languages.map(language => getLanguageIcon(language)).join('')}
-                            </div>
-                            <a class="button" href="${pageLink}">לדף הפרויקט</a>
-                        </div>
-                    `;
-
-                    // Append the project to the container
-                    jsProjectsContainer.innerHTML += projectHTML;
-                });
-
-            })
-            .catch(error => console.error('Error fetching the project data:', error));
-    </script> -->
-
-
 
 
 </body>
